// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for JimoCloudActions's sendUserdata destination action: all fields 1`] = `
Object {
  "email": "mitried@honur.gt",
  "traits": Object {
    "testType": "nWQv3NyvuHmgznkn",
  },
  "userId": "nWQv3NyvuHmgznkn",
}
`;

exports[`Testing snapshot for JimoCloudActions's sendUserdata destination action: required fields 1`] = `
Object {
  "userId": "nWQv3NyvuHmgznkn",
}
`;
